# deadlock-api-assets

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  exceptions.txt  extract_game_files.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker-image-staging.yaml  docker-image.yaml  lint-dockerfiles.yaml  pre-commit.yaml
deadlock_assets_api/: __init__.py  deploy.py  draw_minimap.py  glob.py  kv3parser.py  logging_middleware.py  main.py  parse_game_data.py  utils.py
deadlock_assets_api/layout/: layout.py  render.py
deadlock_assets_api/models/: enums.py  map_data.py
deadlock_assets_api/parsers/: accolades.py  generic_data.py  heroes.py  items.py  loot_table.py  misc.py  npc_units.py
deadlock_assets_api/routes/: __init__.py  raw.py  v1.py  v2.py
res/: ability_icons.css  ability_properties.css  ability_property_icons.css  accolades.vdata  citadel_base_styles.css  citadel_mod_tooltip_shared.css  citadel_popup_roster_select.css  citadel_shared_colors.css  generic_data.json  generic_data.vdata  hero_background_default.css  heroes.json  heroes.vdata  items.json  loot_tables.vdata  misc.vdata  misc_entities.json  npc_units.json  npc_units.vdata  objectives_map.css  raw_accolades.json  raw_generic_data.json  raw_heroes.json  steam.inf
res/localization/: citadel_attributes_brazilian.json  citadel_attributes_czech.json  citadel_attributes_english.json  citadel_attributes_french.json  citadel_attributes_german.json  citadel_attributes_indonesian.json  citadel_attributes_italian.json  citadel_attributes_japanese.json  citadel_attributes_koreana.json  citadel_attributes_latam.json  (+75 more)
scripts/: accolades.vdata  generic_data.vdata  heroes.vdata  loot_tables.vdata  misc.vdata  npc_units.vdata
(+735 files in other folders)
