[project]
name = "deadlock-assets-api"
version = "0.1.0"
description = ""
authors = [
    { name = "Manuel Raimann", email = "raimannma@outlook.de" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "css-parser>=1.0.10",
    "fastapi>=0.115.5",
    "murmurhash2>=0.2.10",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "py-cachify>=2.0.10",
    "scalar-fastapi>=1.0.3",
    "uvicorn>=0.34.0",
]

[dependency-groups]
parse = [
    "stringcase>=1.2.0",
    "matplotlib>=3.9.3",
    "opencv-python>=4.10.0.84",
    "shapely>=2.0.6",
    "vdf>=3.4",
]
dev = [
    "ruff>=0.8.1",
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "deadlock_assets_api",
    "deadlock_assets_api.routes",
    "deadlock_assets_api.models",
    "deadlock_assets_api.models.v1",
    "deadlock_assets_api.models.v2",
    "deadlock_assets_api.parsers",
]
