[project]
name = "deadlock-assets-api"
version = "0.1.0"
description = ""
authors = [
    { name = "Manuel Raimann", email = "raimannma@outlook.de" },
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "css-parser>=1.0.10",
    "fastapi>=0.129.0",
    "murmurhash2>=0.2.10",
    "scalar-fastapi>=1.0.3",
    "uvicorn>=0.34.0",
]

[dependency-groups]
parse = [
    "stringcase>=1.2.0",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "shapely>=2.1.2",
    "vdf>=3.4",
]
dev = [
    "ruff>=0.15.10",
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
